public class OpenTask implements Task {
}
