public class PauseTask implements Task {
}
