public class ReceiveTask implements Task {
}
