
public interface Task {
}
